lab/lab2/manifests/simple-server/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-api
  template:
    metadata:
      labels:
        app: simple-api
    spec:
      containers:
      - name: server
        image: alan0415/simple-fastapi-server:v0.2
        #command: ["uvicorn", "main:app", "--reload", "--host", "0.0.0.0", "--port", "8501", "--root-path", "/simple-service"]
        ports:
        - containerPort: 8501
