lab/lab2/manifests/simple-server/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-simple-apiserver
  namespace: default

spec:
  parentRefs:
    - name: traefik-gateway

  #hostnames:
  #  - icsdtg2.simpleserver
  
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
        - path:
            type: PathPrefix
            value: /items
        - path:
            type: PathPrefix
            value: /docs

      backendRefs:
        - name: simple-api-service
          port: 8501
          weight: 1
